# klickhouse

./: .gitignore  Justfile  devenv.nix  devenv.yaml
.github/workflows/: main.yml  outdated.yaml
klickhouse/: Cargo.toml  README.md
klickhouse/examples/: basic.rs  pool.rs
klickhouse/src/: block.rs  client.rs  compression.rs  errors.rs  internal_client_in.rs  internal_client_out.rs  io.rs  lib.rs  lock.rs  manager.rs  migrate.rs
klickhouse/src/convert/: std_deserialize.rs  std_serialize.rs  vec_tuple.rs
klickhouse/src/types/: mod.rs  tests.rs
klickhouse/src/types/deserialize/: geo.rs  low_cardinality.rs  map.rs  nullable.rs  sized.rs  string.rs  tuple.rs
klickhouse/src/types/serialize/: geo.rs  low_cardinality.rs  map.rs  nullable.rs  sized.rs  string.rs  tuple.rs
klickhouse/src/values/: bigdecimal.rs  clickhouse_uuid.rs  date.rs  fixed_point.rs  geo.rs  int256.rs  ip.rs  mod.rs
klickhouse/tests/: main.rs  test_bigdecimal.rs  test_safety.rs
klickhouse_derive/: Cargo.toml
klickhouse_derive/src/: attr.rs  bound.rs  case.rs  clickhouse_enum.rs  dummy.rs  fragment.rs  lib.rs  receiver.rs  row.rs
nix/: clickhouse-config.xml  clickhouse-users.xml
