###################################
#  Package Metadata
###################################
[package]
name = "klickhouse"
version = "0.13.3"
authors = ["Protryon <max.bruce12@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Protryon/klickhouse"
description = "Klickhouse is a pure Rust SDK for working with Clickhouse with the native protocol in async environments with minimal boilerplate and maximal performance."
keywords = ["clickhouse", "database", "tokio", "sql"]
readme = "../README.md"
autotests = false
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true

###################################
#  Tests & Examples
###################################
[[test]]
name = "test"
path = "tests/main.rs"

[[example]]
name = "pool"
required-features = ["bb8"]

[[example]]
name = "basic"

###################################
#  Dependencies
###################################
[dependencies]
# -- Основные зависимости --
tokio = { version = "1.43.0", features = ["io-util", "net", "rt", "macros"] }
async-trait = "0.1.85"
thiserror = "2.0.11"
log = "0.4.25"
indexmap = { version = "2.7.1" }
uuid = { version = "1.12.0", features = ["v4"] }
chrono = { version = "0.4.39", default-features = false, features = ["std", "now"] }
chrono-tz = "0.10.1"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
tokio-stream = "0.1.17"
cityhash-rs = "1.0.1"
compiler-tools = "0.2.0"
compiler-tools-derive = "0.2.0"
paste = "1.0.15"

# -- Опциональные зависимости --
lz4 = { version = "1.28.1", optional = true }
bb8 = { version = "0.9.0", optional = true }
klickhouse_derive = { version = "=0.13.0", optional = true, path = "../klickhouse_derive" }

# refinery-core приходится фиксировать версию из-за проблемы с transmute
refinery-core = { version = "=0.8.14", optional = true } # must be locked due to transmute

time = { version = "0.3.37", features = ["parsing", "formatting"], optional = true }
rust_decimal = { version = "1.36.0", optional = true }
serde = { version = "1.0.217", features = ["derive"], optional = true }
serde_json = { version = "1.0.136", optional = true }
tokio-rustls = { version = "0.26.1", optional = true }
rustls-pki-types = { version = "1.10.1", optional = true }
geo-types = { version = "0.7.15", optional = true }

###################################
#  Dev Dependencies
###################################
[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
env_logger = "0.11.6"

###################################
#  Features
###################################
[features]
# Подключаются по умолчанию
default = ["derive", "compression", "serde"]

# Для генерации derive-макросов
derive = ["klickhouse_derive"]

# Для работы со сжатием
compression = ["lz4"]

# Геометрические типы
geo-types = ["dep:geo-types"]

# Для миграций (refinery) и типов Time
refinery = ["refinery-core", "time"]

# Поддержка serde-сериализации
serde = [
    "dep:serde",
    "serde_json",
    "uuid/serde",      # включает serde в uuid
    "chrono/serde"    # включает serde в chrono
]

# TLS поддержка
tls = ["tokio-rustls", "rustls-pki-types"]

# Пулл подключений (bb8)
bb8 = ["dep:bb8"]

###################################
#  Build Dependencies
###################################
[build-dependencies]
rustc_version = "0.4.1"