###################################
#  Package Metadata
###################################
[package]
name = "klickhouse"
version = "0.14.2"
authors = ["Protryon <max.bruce12@gmail.com>", "kioqq <kioqq@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/katana/klickhouse"
description = "Klickhouse is a pure Rust SDK for working with Clickhouse with the native protocol in async environments with minimal boilerplate and maximal performance."
keywords = ["clickhouse", "database", "tokio", "sql"]
readme = "../README.md"
autotests = false
rust-version = "1.81.0"

[package.metadata.docs.rs]
all-features = true

###################################
#  Tests & Examples
###################################
[[test]]
name = "test"
path = "tests/main.rs"

[[example]]
name = "pool"
required-features = ["bb8"]

[[example]]
name = "basic"

###################################
#  Dependencies
###################################
[dependencies]
# -- Main dependencies --
tokio = { version = "1.48.0", features = ["io-util", "net", "rt", "macros"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
log = "0.4.28"
indexmap = { version = "2.11.4" }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", default-features = false, features = ["std", "now"] }
chrono-tz = "0.10.4"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
tokio-stream = "0.1.17"
cityhash-rs = "1.0.1"
compiler-tools = "0.2.0"
compiler-tools-derive = "0.2.0"
paste = "1.0.15"

# -- Security dependencies --
ring = "=0.17.14"

# -- Optional dependencies --
lz4 = { version = "1.28.1", optional = true }
bb8 = { version = "0.9.0", optional = true }
klickhouse_derive = { version = "=0.14.2", optional = true, path = "../klickhouse_derive" }

# refinery-core version must be locked due to a transmute issue
refinery-core = { version = "=0.8.16", optional = true } # must be locked due to transmute

time = { version = "0.3.44", features = ["parsing", "formatting"], optional = true }
rust_decimal = { version = "1.38.0", optional = true }
bigdecimal = { version = "0.4.8", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
rustls-pki-types = { version = "1.12.0", optional = true }
geo-types = { version = "0.7.17", optional = true }

###################################
#  Dev Dependencies
###################################
[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
env_logger = "0.11.8"

###################################
#  Security fixes
###################################
[patch.crates-io]
idna = "1.0.3"
url = "2.5.4"

###################################
#  Features
###################################
[features]
# Enabled by default
default = ["derive", "compression", "serde", "bigdecimal"]

bigdecimal = ["dep:bigdecimal"]

rust_decimal = ["dep:rust_decimal"]

# For generating derive macros
derive = ["klickhouse_derive"]

# For compression support
compression = ["lz4"]

# Geometric types
geo-types = ["dep:geo-types"]

# For migrations (refinery) and Time types
refinery = ["refinery-core", "time"]

# Serde serialization support
serde = [
    "dep:serde",
    "serde_json",
    "uuid/serde",      # enables serde in uuid
    "chrono/serde"    # enables serde in chrono
]

# TLS support
tls = ["tokio-rustls", "rustls-pki-types"]

# Connection pooling (bb8)
bb8 = ["dep:bb8"]

###################################
#  Build Dependencies
###################################
[build-dependencies]
rustc_version = "0.4.1"