[package]
name = "klickhouse_derive"
version = "0.14.2"
authors = ["Protryon <max.bruce12@gmail.com>", "kioqq <kioqq@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/katanacap/klickhouse"
description = "proc-macro crate for klickhouse"
keywords = [ "clickhouse", "database", "tokio", "sql" ]
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "klickhouse_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.100"
